:sparkles: Swagger fully documented
