# app/Http/Controllers/PanicController.php
@@ -12,18 +12,18 @@ class PanicController extends Controller
 {
   /**
    * @SWG\Get(
-   *     path="/api/v1/cities",
-   *     summary="List all the cities",
-   *     description="List all the cities available in the database",
-   *     operationId="listCities",
+   *     path="/api/v1/panic",
+   *     summary="List all the existing panic",
+   *     description="List all the panics stored in the database",
+   *     operationId="listPanics",
    *     produces={"application/json", "application/xml"},
-   *     tags={"city"},
+   *     tags={"panic"},
    *     @SWG\Response(
    *          response=200,
    *          description="Successful operation",
    *          @SWG\Schema(
    *              type="array",
-   *              @SWG\Items(ref="#/definitions/City)
+   *              @SWG\Items(ref="#/definitions/Panic")
    *          )
    *     )
    * )
@@ -36,6 +36,30 @@ class PanicController extends Controller
       return $panics;
   }
 
+  /**
+   * @SWG\Post(
+   *     path="/api/v1/panic",
+   *     summary="Create a new panic",
+   *     description="Create a new panic into the database",
+   *     operationId="createPanic",
+   *     consumes={"application/json", "application/xml"},
+   *     produces={"application/json", "application/xml"},
+   *     tags={"panic"},
+   *     @SWG\Parameter(
+   *          name="panic",
+   *          in="body",
+   *          description="Panic to be added to the database",
+   *          required=true,
+   *          @SWG\Schema(ref="#/definitions/Panic")
+   *     ),
+   *     @SWG\Response(
+   *          response=200,
+   *          description="Successful operation",
+   *          @SWG\Schema(@SWG\Items(ref="#/definitions/Panic"))
+   *     )
+   * )
+   * @return \Illuminate\Database\Eloquent\Collection|static[]
+   */
   public static function store(PanicRequest $request)
   {
       $panic = new Panic($request->all());
@@ -54,6 +78,29 @@ class PanicController extends Controller
 
   }
 
+  /**
+   * @SWG\Get(
+   *     path="/api/v1/panic/{id}",
+   *     summary="Find a panic",
+   *     description="Looks for the panic with that ID into the database",
+   *     operationId="findPanic",
+   *     produces={"application/json", "application/xml"},
+   *     tags={"panic"},
+   *     @SWG\Parameter(
+   *          name="id",
+   *          in="path",
+   *          description="Id of the panic",
+   *          required=true,
+   *          type="string"
+   *     ),
+   *     @SWG\Response(
+   *          response=200,
+   *          description="Successful operation",
+   *          @SWG\Schema(@SWG\Items(ref="#/definitions/Panic"))
+   *     )
+   * )
+   * @return \Illuminate\Database\Eloquent\Collection|static[]
+   */
   public static function show($panic)
   {
       return Panic::find($panic);
