# app/Http/Controllers/PersonController.php
@@ -10,18 +10,18 @@ class PersonController extends Controller
 {
   /**
    * @SWG\Get(
-   *     path="/api/v1/cities",
-   *     summary="List all the cities",
-   *     description="List all the cities available in the database",
-   *     operationId="listCities",
+   *     path="/api/v1/people",
+   *     summary="List all the existing people",
+   *     description="List all the people stored in the database",
+   *     operationId="listPeople",
    *     produces={"application/json", "application/xml"},
-   *     tags={"city"},
+   *     tags={"person"},
    *     @SWG\Response(
    *          response=200,
    *          description="Successful operation",
    *          @SWG\Schema(
    *              type="array",
-   *              @SWG\Items(ref="#/definitions/City)
+   *              @SWG\Items(ref="#/definitions/Person")
    *          )
    *     )
    * )
@@ -29,18 +29,64 @@ class PersonController extends Controller
    */
   public static function index()
   {
-
       $people = Person::all();
       return $people;
   }
 
-  public static function store(PersonRequest $request)
-  {
-      $person = new Person($request->all());
-      $person->save();
-      return $person;
-  }
+  /**
+   * @SWG\Post(
+   *     path="/api/v1/people",
+   *     summary="Create a new person",
+   *     description="Create a new person into the database",
+   *     operationId="createPerson",
+   *     consumes={"application/json", "application/xml"},
+   *     produces={"application/json", "application/xml"},
+   *     tags={"person"},
+   *     @SWG\Parameter(
+   *          name="Person",
+   *          in="body",
+   *          description="Person to be added to the database",
+   *          required=true,
+   *          @SWG\Schema(ref="#/definitions/Person")
+   *     ),
+   *     @SWG\Response(
+   *          response=200,
+   *          description="Successful operation",
+   *          @SWG\Schema(@SWG\Items(ref="#/definitions/Person"))
+   *     )
+   * )
+   * @return \Illuminate\Database\Eloquent\Collection|static[]
+   */
+    public static function store(PersonRequest $request)
+    {
+        $person = new Person($request->all());
+        $person->save();
+        return $person;
+    }
 
+  /**
+   * @SWG\Get(
+   *     path="/api/v1/people/{id}",
+   *     summary="Find a person",
+   *     description="Looks for the person with that ID into the database",
+   *     operationId="findPerson",
+   *     produces={"application/json", "application/xml"},
+   *     tags={"person"},
+   *     @SWG\Parameter(
+   *          name="id",
+   *          in="path",
+   *          description="Id of the person",
+   *          required=true,
+   *          type="string"
+   *     ),
+   *     @SWG\Response(
+   *          response=200,
+   *          description="Successful operation",
+   *          @SWG\Schema(@SWG\Items(ref="#/definitions/Person"))
+   *     )
+   * )
+   * @return \Illuminate\Database\Eloquent\Collection|static[]
+   */
   public static function show($person)
   {
       return Person::find($person);
